k8s/client-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec: # default type: clusterIP
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000 # port number of the current service(cluster IP service).
      targetPort: 3000 # port number of our pod(express server port)
