k8s/comments-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec: # default type: clusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # port number of the current service(cluster IP service).
      targetPort: 4001 # port number of our pod(express server port)
