k8s/moderation-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec: # default type: clusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003 # port number of the current service(cluster IP service).
      targetPort: 4003 # port number of our pod(express server port)
