k8s/query-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec: # default type: clusterIP
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002 # port number of the current service(cluster IP service).
      targetPort: 4002 # port number of our pod(express server port)
